--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -240,6 +240,13 @@
       </section>
 
       <section class="section-stories">
+        <div class="bg-video">
+          <video class="bg-video__content" autoplay muted loop>
+            <source src="/img/video.mp4" alt="background video" />
+            <source src="./img/video.webm" alt="background video" />
+            Your browser is not support the video
+          </video>
+        </div>
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">We make people genuinely happy</h2>
         </div>
