--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -16,6 +16,43 @@
     <title>Natours | Exciting tours for adventurous people</title>
   </head>
   <body>
+    <div class="navigation">
+      <input type="checkbox" class="navigation__checkbox" id="navi__toggle" />
+      <label for="navi__toggle" class="navigation__button">
+        <span class="navigation__icon">&nbsp;</span>
+      </label>
+
+      <div class="navigation__background">&nbsp;</div>
+      <nav class="navigation__menu">
+        <ul class="navigation__list">
+          <li class="navigation__item">
+            <a href="#section-about" class="navigation__link"
+              ><span>01</span> About Natours</a
+            >
+          </li>
+          <li class="navigation__item">
+            <a href="#section-features" class="navigation__link"
+              ><span>02</span>Your benefits</a
+            >
+          </li>
+          <li class="navigation__item">
+            <a href="#section-tours" class="navigation__link"
+              ><span>03</span>Popular tours</a
+            >
+          </li>
+          <li class="navigation__item">
+            <a href="#section-stories" class="navigation__link"
+              ><span>04</span>Stories</a
+            >
+          </li>
+          <li class="navigation__item">
+            <a href="#section-booking" class="navigation__link"
+              ><span>05</span>Book now</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </div>
     <header class="header">
       <div class="header__logo-box">
         <img src="./img/logo-white.png" alt="Logo" class="header__logo" />
@@ -26,12 +63,14 @@
           <span class="heading-primary--sub">is where life happens</span>
         </h1>
 
-        <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+        <a href="#section-tours" class="btn btn--white btn--animated"
+          >Discover our tours</a
+        >
       </div>
     </header>
 
     <main>
-      <section class="section-about">
+      <section class="section-about" id="section-about">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             Exciting tours for adventurous people
@@ -42,7 +81,7 @@
             <h3 class="heading-tertiary u-margin-bottom-small">
               You're going to fall in love with nature
             </h3>
-            <p class="story__paragraph">
+            <p class="paragraph">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore,
               excepturi vero exercitationem saepe quasi accusantium ratione?
               Aperiam vitae adipisci dolorum. Eius sapiente culpa dolorum
@@ -51,7 +90,7 @@
             <h3 class="heading-tertiary u-margin-bottom-small">
               Live adventures like your never have before
             </h3>
-            <p class="story__paragraph">
+            <p class="paragraph">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
               at sint provident aperiam! Facere, voluptates dolore. Officia
               veniam assumenda sit nihil repellat voluptas laboriosam.
@@ -60,6 +99,31 @@
           </div>
           <div class="col-1-of-2">
             <div class="composition">
+              <img
+                srcset="./img/nat-1 300w, ./img/nat-1-large.jpg 1000w"
+                sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
+                alt="Photo of nature 1"
+                class="composition__photo composition__photo--p1"
+                src="./img/nat-1-large.jpg"
+              />
+
+              <img
+                srcset="./img/nat-2 300w, ./img/nat-2-large.jpg 1000w"
+                sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
+                alt="Photo of nature 2"
+                class="composition__photo composition__photo--p2"
+                src="./img/nat-2-large.jpg"
+              />
+
+              <img
+                srcset="./img/nat-3 300w, ./img/nat-3-large.jpg 1000w"
+                sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
+                alt="Photo of nature 3"
+                class="composition__photo composition__photo--p3"
+                src="./img/nat-3-large.jpg"
+              />
+
+              <!-- 
               <img
                 src="./img/nat-1-large.jpg"
                 alt="Photo of nature 1"
@@ -71,14 +135,14 @@
               /><img
                 src="./img/nat-3-large.jpg"
                 alt="Photo of nature 3"
-                class="composition__photo composition__photo--p3"
+                class="composition__photo composition__photo--p3" -->
               />
             </div>
           </div>
         </div>
       </section>
 
-      <section class="section-features">
+      <section class="section-features" id="section-features">
         <div class="row">
           <div class="col-1-of-4">
             <div class="feature-box">
@@ -134,7 +198,7 @@
         </div>
       </section>
 
-      <section class="section-tours">
+      <section class="section-tours" id="section-tours">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">Most popular tours</h2>
         </div>
@@ -166,7 +230,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$297</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#pop-up" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -197,7 +261,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$497</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#pop-up" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -228,7 +292,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$897</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#pop-up" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -239,7 +303,7 @@
         </div>
       </section>
 
-      <section class="section-stories">
+      <section class="section-stories" id="section-stories">
         <div class="bg-video">
           <video class="bg-video__content" autoplay muted loop>
             <source src="/img/video.mp4" alt="background video" />
@@ -306,8 +370,152 @@
         </div>
       </section>
 
-      <section class="booking"></section>
+      <section class="section-booking" id="section-booking">
+        <div class="row">
+          <div class="book">
+            <div class="book__form">
+              <form action="#" class="form">
+                <div class="u-center-text u-margin-bottom-medium">
+                  <h2 class="heading-secondary">Start booking Now</h2>
+                </div>
+                <div class="form__group">
+                  <input
+                    type="text"
+                    placeholder="Full Name"
+                    class="form__input"
+                    id="name"
+                    autocomplete="off"
+                    required
+                  />
+                  <label for="name" class="form__label">Full Name</label>
+                </div>
+                <div class="form__group">
+                  <input
+                    type="email"
+                    placeholder="Email address"
+                    class="form__input"
+                    id="email"
+                    autocomplete="off"
+                    required
+                  />
+                  <label for="email" class="form__label">Email address</label>
+                </div>
+
+                <div class="form__group .u-margin-bottom-medium">
+                  <div class="form__radio-group">
+                    <input
+                      type="radio"
+                      class="form__radio-input"
+                      id="small"
+                      name="size-group"
+                    />
+                    <label for="small" class="form__radio-label">
+                      <span class="form__radio-btn"></span>
+                      Small tour group</label
+                    >
+                  </div>
+                  <div class="form__radio-group">
+                    <input
+                      type="radio"
+                      class="form__radio-input"
+                      id="large"
+                      name="size-group"
+                    />
+                    <label for="large" class="form__radio-label">
+                      <span class="form__radio-btn"></span>
+                      Large tour group</label
+                    >
+                  </div>
+                </div>
+                <div class="form__group">
+                  <button class="btn btn--green">Next step &rarr;</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+    <footer class="footer">
+      <div class="footer__logo-box u-margin-bottom-big">
+        <picture class="footer__logo">
+          <source
+            srcset="
+              ./img/logo-green-small-1x.png 1x,
+              ./img/logo-green-small-2x.png 2x
+            "
+            media="(max-width: 37.5em)"
+          />
+          <img
+            srcset="./img/logo-green-1x.png 1x, ./img/logo-green-2x.png 2x"
+            alt="full logo"
+            src="./img/logo-green-2x.png"
+          />
+        </picture>
+      </div>
+      <div class="row">
+        <div class="col-1-of-2">
+          <div class="footer__navigation">
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a href="#" class="footer__link">Company</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Contact us</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Carrers</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Privacy Policy</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Terms</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-1-of-2">
+          <p class="footer__copyright">
+            Page design by
+            <a href="#" class="footer__link">Jonas Schmedtmann &copy;</a>.
+            Created by <a href="#" class="footer__link">YP &copy;</a> in 2022 .
+          </p>
+        </div>
+      </div>
+    </footer>
+
+    <!-- MODAL -->
+    <div class="pop-up" id="pop-up">
+      <div class="pop-up__content">
+        <div class="pop-up__left">
+          <img src="./img/nat-8.jpg" alt="Tour photo" class="pop-up__img" />
+          <img src="./img/nat-9.jpg" alt="Tour photo" class="pop-up__img" />
+        </div>
+        <div class="pop-up__right">
+          <a href="#section-tours" class="pop-up__close-btn">&times;</a>
+          <h2 class="heading-secondary u-margin-bottom-medium">
+            Start booking now
+          </h2>
+          <h3 class="heading-tertiary u-margin-bottom-small">
+            Important &ndash; Please read these terms before booking
+          </h3>
+          <p class="pop-up__text u-margin-bottom-medium">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta
+            ipsum aliquid numquam ad voluptatibus ipsam eum repudiandae.
+            Maiores, optio pariatur. Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Dicta, voluptatem odit consectetur, explicabo
+            rerum sint, ad atque dignissimos quibusdam aspernatur doloremque.
+            Magni totam veritatis fuga alias incidunt pariatur vero velit omnis?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
+            eos, fugit ipsam libero pariatur in obcaecati nisi non voluptas
+            dolor cumque dignissimos optio! Iste magni molestiae corporis saepe!
+          </p>
+
+          <a href="#" class="btn btn--green">Book now </a>
+        </div>
+      </div>
+    </div>
 
     <!-- REUSABLE GRID -->
     <!-- <section class="grid-test">
