gitignore added, build css file finalised

--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -9,8 +9,8 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="css/icon-font.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <!-- <link rel="stylesheet" href="css/icon-font.css" /> -->
+    <link rel="stylesheet" href="css/style.min.css" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
     <title>Natours | Exciting tours for adventurous people</title>
@@ -100,7 +100,7 @@
           <div class="col-1-of-2">
             <div class="composition">
               <img
-                srcset="./img/nat-1 300w, ./img/nat-1-large.jpg 1000w"
+                srcset="./img/nat-1.jpg 300w, ./img/nat-1-large.jpg 1000w"
                 sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
                 alt="Photo of nature 1"
                 class="composition__photo composition__photo--p1"
@@ -108,7 +108,7 @@
               />
 
               <img
-                srcset="./img/nat-2 300w, ./img/nat-2-large.jpg 1000w"
+                srcset="./img/nat-2.jpg 300w, ./img/nat-2-large.jpg 1000w"
                 sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
                 alt="Photo of nature 2"
                 class="composition__photo composition__photo--p2"
@@ -116,7 +116,7 @@
               />
 
               <img
-                srcset="./img/nat-3 300w, ./img/nat-3-large.jpg 1000w"
+                srcset="./img/nat-3.jpg 300w, ./img/nat-3-large.jpg 1000w"
                 sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
                 alt="Photo of nature 3"
                 class="composition__photo composition__photo--p3"
